--- a/monitor-project/Monitor-Web/.env.development
+++ b/monitor-project/Monitor-Web/.env.development
@@ -1,7 +1,10 @@
 # 开发环境配置
 
-# API基础路径
+# Monitor Server API基础路径
 VITE_API_BASE_URL=http://localhost:8080/api
+
+# AI服务API基础路径
+VITE_AI_API_BASE_URL=http://localhost:8081/api
 
 # WebSocket地址
 VITE_WS_BASE_URL=ws://localhost:8080
